@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.1.1"
+  VERSION = "3.1.2"
 end
