@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 3.1.2 November 23, 2015
+
+* include gem 'administrate' from the good folks at thoughtbot
+
 h3. 3.1.1 November 6, 2015
 
 * include gem 'high_voltage' so Bootstrap templates will work with all example apps
